# whirlpool

./: .gitignore  Agents.md  Cargo.toml  README.md  Setup.md  build.gradle.kts  package-lock.json  settings.gradle.kts
.github/workflows/: android-build.yml
app/: build.gradle.kts  proguard-rules.pro
app/src/main/: AndroidManifest.xml
app/src/main/assets/: curl_cffi_fetch.py
app/src/main/java/com/whirlpool/app/: CrashReporter.kt  MainActivity.kt  WhirlpoolApp.kt
app/src/main/java/com/whirlpool/app/data/: EngineRepository.kt
app/src/main/java/com/whirlpool/app/player/: VideoPlayerSurface.kt
app/src/main/java/com/whirlpool/app/theme/: Color.kt  Theme.kt  Type.kt
app/src/main/java/com/whirlpool/app/ui/: DownloadedVideoIndex.kt  FeedPreferenceCodec.kt  SettingsMenuSheet.kt  WhirlpoolFeedCoordinator.kt  WhirlpoolPlaybackCoordinator.kt  WhirlpoolScreen.kt  WhirlpoolSettingsCoordinator.kt  WhirlpoolViewModel.kt
app/src/main/python/: ytdlp_bridge.py
app/src/main/res/drawable/: ic_player_pause.xml  ic_whirlpool_close.xml  ic_whirlpool_favorite.xml  ic_whirlpool_favorite_border.xml  ic_whirlpool_filter.xml  ic_whirlpool_forward.xml  ic_whirlpool_rewind.xml  ic_whirlpool_search.xml  ic_whirlpool_settings.xml
app/src/main/res/values/: strings.xml
app/src/test/java/com/whirlpool/app/data/: EngineRepositoryParsingTest.kt
rust/engine/: Cargo.toml  uniffi.toml
rust/engine/src/: api.rs  curl_cffi.rs  db.rs  errors.rs  lib.rs  models.rs  updater.rs  ytdlp.rs
scripts/: build_android_libs.sh  curl_cffi_fetch.py  generate_uniffi_kotlin.sh  logcat_check.sh
(+2 files in other folders)
