[package]
name = "whirlpool_engine"
version = "0.1.0"
edition = "2021"
rust-version = "1.75"

[lib]
name = "whirlpool_engine"
crate-type = ["staticlib", "cdylib"]

[[bin]]
name = "uniffi-bindgen"
path = "uniffi-bindgen.rs"

[dependencies]
chrono = { version = "0.4.38", features = ["clock"] }
reqwest = { version = "0.12.12", default-features = false, features = ["json", "rustls-tls"] }
rusqlite = { version = "0.37.0", features = ["bundled"] }
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.137"
thiserror = "2.0.11"
tokio = { version = "1.47.1", features = ["rt-multi-thread"] }
uniffi = { version = "0.29.4", features = ["cli"] }
urlencoding = "2.1.3"

[dev-dependencies]
tempfile = "3.15.0"

